--- a/app/views/home/credits.html.erb
+++ b/app/views/home/credits.html.erb
@@ -1,135 +1,131 @@
 <div class="page-attribution template-attribution section-attribution environment-live">
-
   <div id="container">
-
     <div id="primary-content" role="main">
-
       <div id="unit-content" class="unit">
 
         <header id="header">
-  <h1>placeGant</h1>
-  <p>These are all of the images used on placeGant. Please provide correct attribution when using these images. If you need more of the Gantman in your life, the illustrations can be found as <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">stickers & t-shirts</a>.</p>
-  </header><!-- /#header -->
+          <h1>placeGant Credits</h1>
+          These are all of the images used on placeGant. Please provide correct attribution when using these images. If you need more of the Gantman in your life, the illustrations can be found as <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist" target="_blank">stickers & t-shirts</a>.
+          <p></p>
+        </header>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_1.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_2.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_3.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_4.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlabordeE">photo thanks to: Gant selfie</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_1.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_2.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_3.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_4.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlabordeE">photo thanks to: Gant selfie</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_5.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_6.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_7.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_8.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_5.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_6.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_7.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_8.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_9.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_10.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_11.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_12.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_9.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_10.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_11.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_12.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_13.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_14.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_15.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_16.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_13.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_14.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_15.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_16.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_17.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_18.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">with Yukihiro Matsumoto, aka "Matz"</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_19.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_20.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_17.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_18.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">with Yukihiro Matsumoto, aka "Matz"</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_19.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_20.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_21.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_22.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: BLT Ball</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_23.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_24.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_21.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_22.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: BLT Ball</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_23.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_24.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_25.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant selfie</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_26.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_27.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_28.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">image thanks to: Gant Laborde</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_25.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant selfie</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_26.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_27.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_28.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">image thanks to: Gant Laborde</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_29.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_30.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_31.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_32.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_29.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_30.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_31.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_32.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a></p>
 
-      <p><img src="<%= asset_path('attribution/gant200_200_33.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant selfie</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_34.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_35.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
-      <p><img src="<%= asset_path('attribution/gant200_200_36.jpg') %>" alt="Gant Laborde">
-      <br>
-      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_33.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant selfie</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_34.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_35.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
+        <p><img src="<%= asset_path('attribution/gant200_200_36.jpg') %>" alt="Gant Laborde">
+        <br>
+        <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a></p>
+      </div>
     </div>
   </div>
-</div>
-</div>
-</div>
 </div>
